# advent-of-code-18

./: README.html  README.md  advent-of-code.cabal  stack.yaml
data/: advent08.txt  advent12-small.txt  advent13-small.txt  advent13-small2.txt  advent13-very-small.txt  advent17-test.txt
problems/: day01.html  day02.html  day03.html  day04.html  day05.html  day06.html  day07.html  day08.html  day09.html  day10.html  day11.html  day12.html  day13.html  day14.html  day15.html  day16.html  day17.html  day18.html  day19.html  day20.html  day22.html  day23.html  day24.html  day25.html
src/advent01/: advent01.hs  advent01.ipynb
src/advent02/: advent02.hs
src/advent03/: advent03.hs
src/advent04/: advent04.hs
src/advent05/: advent05.hs
src/advent06/: advent06.hs
src/advent07/: advent07.hs
src/advent08/: advent08-foldable.hs  advent08-treelibrary.hs  advent08.hs
src/advent09/: advent09-pointlist.hs  advent09.hs
src/advent10/: advent10-iterate-zip.hs  advent10.hs
src/advent11/: advent11-map.hs  advent11-naive.hs  advent11.hs
src/advent12/: advent12-comonad.hs  advent12.hs  life.hs
src/advent13/: advent13.hs
src/advent14/: advent14.hs
src/advent15/: advent15.hs
src/advent16/: advent16.hs
src/advent17/: advent17.hs
src/advent18/: advent18.hs
src/advent19/: advent19.hs
src/advent20/: advent20.hs
src/advent21/: advent21-from-megathread.hs  advent21.hs
src/advent22/: advent22.hs
src/advent23/: advent23.hs
src/advent24/: advent24.hs  advent24iterate.hs
src/advent25/: advent25.hs
