name:                advent-of-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/neilnjae/advent-of-code#readme
license:             BSD3
-- license-file:        LICENSE
author:              Neil Smith
maintainer:          noone@njae.me.uk
copyright:           2018 Neil Smith
category:            None
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable advent-of-code
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable advent01
  hs-source-dirs:      src/advent01
  main-is:             advent01.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers

executable advent02
  hs-source-dirs:      src/advent02
  main-is:             advent02.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable advent03
  hs-source-dirs:      src/advent03
  main-is:             advent03.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers

executable advent04
  hs-source-dirs:      src/advent04
  main-is:             advent04.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , time 
                     , containers

executable advent05
  hs-source-dirs:      src/advent05
  main-is:             advent05.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable advent06
  hs-source-dirs:      src/advent06
  main-is:             advent06.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers

executable advent07
  hs-source-dirs:      src/advent07
  main-is:             advent07.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers

executable advent08
  hs-source-dirs:      src/advent08
  main-is:             advent08.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec

-- executable advent08foldable
--   hs-source-dirs:      src/advent08
--   main-is:             advent08-foldable.hs
--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5
--                      , text
--                      , megaparsec

executable advent08tree
  hs-source-dirs:      src/advent08
  main-is:             advent08-treelibrary.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers

executable advent09
  hs-source-dirs:      src/advent09
  main-is:             advent09.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers

executable advent09pl
  hs-source-dirs:      src/advent09
  main-is:             advent09-pointlist.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers
                     , pointedlist

executable advent10
  hs-source-dirs:      src/advent10
  main-is:             advent10.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers

executable advent10iz
  hs-source-dirs:      src/advent10
  main-is:             advent10-iterate-zip.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers   

executable advent11
  hs-source-dirs:      src/advent11
  main-is:             advent11.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers

executable advent11m
  hs-source-dirs:      src/advent11
  main-is:             advent11-map.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers

executable advent11naive
  hs-source-dirs:      src/advent11
  main-is:             advent11-naive.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers

executable advent12
  hs-source-dirs:      src/advent12
  main-is:             advent12.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers

executable life
  hs-source-dirs:      src/advent12
  main-is:             life.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , comonad
