name:                advent-of-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/neilnjae/advent-of-code#readme
license:             BSD3
-- license-file:        LICENSE
author:              Neil Smith
maintainer:          noone@njae.me.uk
copyright:           2018 Neil Smith
category:            None
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable advent-of-code
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable advent01
  hs-source-dirs:      src/advent01
  main-is:             advent01.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers

executable advent02
  hs-source-dirs:      src/advent02
  main-is:             advent02.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable advent03
  hs-source-dirs:      src/advent03
  main-is:             advent03.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers

executable advent04
  hs-source-dirs:      src/advent04
  main-is:             advent04.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , time 
                     , containers

executable advent05
  hs-source-dirs:      src/advent05
  main-is:             advent05.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable advent06
  hs-source-dirs:      src/advent06
  main-is:             advent06.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers

executable advent07
  hs-source-dirs:      src/advent07
  main-is:             advent07.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers

executable advent08
  hs-source-dirs:      src/advent08
  main-is:             advent08.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec

-- executable advent08foldable
--   hs-source-dirs:      src/advent08
--   main-is:             advent08-foldable.hs
--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5
--                      , text
--                      , megaparsec

executable advent08tree
  hs-source-dirs:      src/advent08
  main-is:             advent08-treelibrary.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers

executable advent09
  hs-source-dirs:      src/advent09
  main-is:             advent09.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers

executable advent09pl
  hs-source-dirs:      src/advent09
  main-is:             advent09-pointlist.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers
                     , pointedlist

executable advent10
  hs-source-dirs:      src/advent10
  main-is:             advent10.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers

executable advent10iz
  hs-source-dirs:      src/advent10
  main-is:             advent10-iterate-zip.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers   

executable advent11
  hs-source-dirs:      src/advent11
  main-is:             advent11.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers

executable advent11naive
  hs-source-dirs:      src/advent11
  main-is:             advent11-naive.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers

executable advent12
  hs-source-dirs:      src/advent12
  main-is:             advent12.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers

-- executable life
--   hs-source-dirs:      src/advent12
--   main-is:             life.hs
--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5
--                      , comonad

executable advent13
  hs-source-dirs:      src/advent13
  main-is:             advent13.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers

executable advent14
  hs-source-dirs:      src/advent14
  main-is:             advent14.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers   

executable advent15
  hs-source-dirs:      src/advent15
  main-is:             advent15.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers   
                     , pqueue

executable advent16
  hs-source-dirs:      src/advent16
  main-is:             advent16.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers

executable advent17
  hs-source-dirs:      src/advent17
  main-is:             advent17.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers

executable advent18
  hs-source-dirs:      src/advent18
  main-is:             advent18.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , megaparsec
                     , containers

executable advent19
  hs-source-dirs:      src/advent19
  main-is:             advent19.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , text
                     , megaparsec   

executable advent20
  hs-source-dirs:      src/advent20
  main-is:             advent20.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , transformers
                     , extra
                     , text
                     , megaparsec 
                     , linear

executable advent21
  hs-source-dirs:      src/advent21
  main-is:             advent21.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , text
                     , megaparsec   

executable advent21fm
  hs-source-dirs:      src/advent21
  main-is:             advent21-from-megathread.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , text
                     , megaparsec
                     , monad-loops
                     , array

executable advent22
  hs-source-dirs:      src/advent22
  main-is:             advent22.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , pqueue

executable advent23
  hs-source-dirs:      src/advent23
  main-is:             advent23.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , text
                     , megaparsec 
                     , linear
                     , pqueue
